# kandinsky_telegram_bot_client

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: .env-local  bot.py  dependencies.py  kandinsky.py
