[tool.poetry]
name = "kandinnsky-telegram-bot-client"
version = "0.1.0"
description = ""
authors = ["Sir Lancevrot VI <k.tendit@spacepug.games>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
replicate = "^0.15.4"
pytelegrambotapi = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
